[package]
name = "twitter_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "twitter_api"
path = "src/lib.rs"

[[bin]]
name = "twitter_test"
path = "src/bin.rs"

[dependencies]
hmac-sha = "0.4"
base64 = "*"
percent-encoding = "*"
reqwest = { version = "*", features = ["blocking"] }
textnonce = "*"
dotenv = "0.15"
